# API_DOC/swagger_server/models/__init__.py
@@ -4,4 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.campaign import Campaign
+from swagger_server.models.reporter import Reporter
 from swagger_server.models.tweet import Tweet
